<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="md__drawerOpenIndicatorDesc">Close drawer</string>

    <string name="md__drawerClosedIndicatorDesc">Open drawer</string>
    
    <string name="app_name">SmartRecycleV2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="point">Point(s)</string>
    <string name="paper">Paper</string>
    
    <!-- login -->
    <string name="register">Register</string>
    <string name="login">Login</string>
    
    <!-- Customer main -->
    <string name="schedule_suggest_title">Coming Collection:</string>
    <string name="point_remain_title">Points you have:</string>
    <string name="to_go_for">&#32;point(s) to go for</string>
    <string name="get_point">Get Point!</string>
    
    <!-- search -->
    <string name="place">Place</string>
    <string name="date">Date</string>
    <string name="search">Search</string>
    
    <!-- detail -->
    <string name="more_schedule">Find more schedule for this company</string>
    
    <!-- gift list -->
    <string name="filter">Filter</string>
    
    <!-- gift -->
    <string name="name">Name:</string>
    <string name="point_colon">Point:</string>
    <string name="get_it">Get it!</string>
    
    <!-- code -->
    <string name="input_code_title">Please input your code</string>
    <string name="output_code_title">Please show this code to customer</string>
    <string name="done">Done!</string>
    
    <!-- recycle -->
    <string name="end">End Record</string>
    <string name="weight">Weight</string>
    
    <!-- profile -->
    <string name="phone">Phone:</string>
    <string name="address">Address:</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    
    <!-- Schedule card -->
    <string name="dash">&#32;-&#32;</string>
    <string name="arrive">Start!</string>

</resources>
