<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<LinearLayout 
	    android:id="@+id/name_bar"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_margin="10dp"
	    >
	    
	     <TextView 
	        android:id="@+id/name_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/name"
	        android:layout_margin="5dp"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        />
	    
	    <TextView 
	        android:id="@+id/name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dp"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        />
	</LinearLayout>
    
	<LinearLayout 
	    android:id="@+id/phone_bar"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_margin="10dp"
	    >
	    
	     <TextView 
	        android:id="@+id/phone_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/phone"
	        android:layout_margin="5dp"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        />
	    
	    <TextView 
	        android:id="@+id/phone"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dp"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        />
	</LinearLayout>
	
	<LinearLayout 
	    android:id="@+id/address_bar"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_margin="10dp"
	    >
	    
	     <TextView 
	        android:id="@+id/address_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/address"
	        android:layout_margin="5dp"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        />
	    
	    <TextView 
	        android:id="@+id/address"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dp"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        />
	</LinearLayout>
	
	<LinearLayout 
	    android:id="@+id/function_list"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="10dp"
	    android:orientation="horizontal"
	    >
	    
	    <Button
            android:id="@+id/btn_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:text="@string/change_password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@drawable/round_btn_bg" />
	    
	    <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:text="@string/save"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@drawable/round_btn_bg" />
	    
	    
	</LinearLayout>
	
</LinearLayout>
