<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:id="@+id/location_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        
        >
        
       	<ImageView 
       	    android:id="@+id/icon_location"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:layout_margin="5dp"
       	   	android:src="@drawable/ic_launcher"
       	    />
        
       	<AutoCompleteTextView 
       	    android:id="@+id/location"
       	    android:layout_width="0dp"
       	    android:layout_height="wrap_content"
       	    android:layout_weight="1"
       	    android:layout_margin="5dp"
       	    android:hint="@string/place"
       	    android:textAppearance="?android:attr/textAppearanceMedium"
       	    />
        
       	<ImageView 
       	    android:id="@+id/icon_gps"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:layout_margin="5dp"
       	   	android:src="@drawable/ic_launcher"
       	    />
    </LinearLayout>

    <LinearLayout 
        android:id="@+id/date_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        >
       	
        <ImageView 
       	    android:id="@+id/icon_time"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:layout_margin="5dp"
       	   	android:src="@drawable/ic_launcher"
       	    />
        
        <Button 
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/date"
       	    android:textAppearance="?android:attr/textAppearanceMedium"
       	    android:background="@null"
            />
        
        
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/type_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        >
       	
        <ImageView 
       	    android:id="@+id/icon_type"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:layout_margin="5dp"
       	   	android:src="@drawable/ic_launcher"
       	    />
        
        <EditText 
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/paper"
       	    android:textAppearance="?android:attr/textAppearanceMedium"
       	    android:editable="false"
            />
               
    </LinearLayout>
    
    <Button 
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_margin="10dp"
        
        />
</LinearLayout>
