<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:id="@+id/schedule_suggest_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        >
        
        <TextView 
            android:id="@+id/schudle_suggest_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_suggest_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        
        <ScrollView 
            android:id="@+id/schedule_suggest_scroll"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:fadeScrollbars="false"
            >
            
            <include layout="@layout/schedule_card_item" />
            
        </ScrollView>
        
    </LinearLayout>
    
    <Button 
        android:id="@+id/btn_get_point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/get_point"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:background="@drawable/round_btn_bg"
        />
    
    <LinearLayout 
        android:id="@+id/gift_point_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        
        android:orientation="vertical"
        >
        
        <TextView 
            android:id="@+id/gift_point_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/point_remain_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        
        <LinearLayout 
            android:id="@+id/point_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/round_card_bg"
            >
            
            
        
        
        <TextView 
            android:id="@+id/point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
            
            <TextView 
                android:id="@+id/point_remain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
                />

            
            <Button 
                android:id="@+id/bnt_gift_suggest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
            </LinearLayout>
        
        
    </LinearLayout>
    
    

    
</LinearLayout>
